Add new project posts and restructure site content
- Removed references to outdated files (`Gemfile`, `head.html`, etc.).
- Added new project posts: "RipShout," "Primer," "DAOC Launcher,"
  "WhatHuh," "QuickFixMyPic," "ShipThatCode," "ClipClop," and "Peepr."
- Updated `_config.yml` to adjust pagination (`paginate: 5` -> `3`).
- Modified `_layout.scss` to increase `max-width` from `38rem` to `58rem`.
- Updated `DocumentLayout` files to reflect new project structure.
- Enhanced `2025-09-07-rant.md` with a new section on .NET practices.
- Updated binary files (`CodeChunks.db`, `.wsuo`, `slnx.sqlite`).

These changes introduce new content, improve layout, and streamline
the site's structure to better showcase the added projects.

--- a/_posts/2025-09-07-rant.md
+++ b/_posts/2025-09-07-rant.md
@@ -2,7 +2,7 @@
 layout: post
 title: The Over Engineering Epidemic
 ---
-# How Interfaces, Unit Tests, and Dependency Injection Are Drowning .NET Applications
+## How Interfaces, Unit Tests, and Dependency Injection Are Drowning .NET Applications
 
 The .NET development community has fallen into a dangerous pattern of cargo cult programming. We've taken valuable tools—interfaces, unit tests, and dependency injection—and turned them into mandatory rituals, applied reflexively regardless of context or actual need. The result? Codebases that are bloated, performance-degraded, and paradoxically harder to understand and maintain than the "legacy" code we're trying to improve.
 
